--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -10,236 +10,245 @@ on:
 jobs:
   build-arm64ec:
     runs-on: ubuntu-24.04-arm
+
     defaults:
       run:
         shell: bash
 
     steps:
+      ###################################################
+      # 1) Checkout source
+      ###################################################
+      - name: Checkout source
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    ###################################################
-    # 1) Checkout source
-    ###################################################
-    - name: Checkout source
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      ###################################################
+      # 2) Install build dependencies
+      ###################################################
+      - name: Install build dependencies
+        run: |
+          set -euxo pipefail
+          sudo apt update
+          sudo apt install -y --no-install-recommends \
+            build-essential autoconf automake libtool pkg-config \
+            python3 python3-pip git gettext flex bison \
+            ninja-build cmake \
+            libasound2-dev libpulse-dev libv4l-dev libgl-dev \
+            libx11-dev libxext-dev libxfixes-dev libxinerama-dev libxi-dev \
+            libxrandr-dev libxrender-dev libfontconfig-dev libfreetype-dev \
+            libgnutls28-dev libdbus-1-dev libsdl2-dev \
+            libjpeg-dev libpng-dev libxml2-dev \
+            libudev-dev libusb-1.0-0-dev libldap2-dev \
+            libpciaccess-dev lld llvm \
+            meson libvulkan-dev
+          sudo apt clean
+          sudo rm -rf /var/lib/apt/lists/*
 
-    ###################################################
-    # 2) Install build dependencies
-    ###################################################
-    - name: Install build dependencies
-      run: |
-        set -euxo pipefail
-        sudo apt update
-        sudo apt install -y --no-install-recommends \
-          build-essential autoconf automake libtool pkg-config \
-          python3 python3-pip git gettext flex bison \
-          ninja-build cmake \
-          libasound2-dev libpulse-dev libv4l-dev libgl-dev \
-          libx11-dev libxext-dev libxfixes-dev libxinerama-dev libxi-dev \
-          libxrandr-dev libxrender-dev libfontconfig-dev libfreetype-dev \
-          libgnutls28-dev libdbus‑1-dev libsdl2-dev \
-          libjpeg-dev libpng-dev libxml2-dev \
-          libudev-dev libusb‑1.0‑0-dev libldap2-dev
-        sudo apt clean
-        sudo rm -rf /var/lib/apt/lists/*
+      ###################################################
+      # 3) Setup llvm-mingw cross toolchain
+      ###################################################
+      - name: Setup llvm-mingw
+        run: |
+          set -euxo pipefail
+          TOOLCHAIN_VER="20260127"
+          ARCHIVE="llvm-mingw-${TOOLCHAIN_VER}-ucrt-ubuntu-22.04-aarch64.tar.xz"
+          wget -q "https://github.com/mstorsjo/llvm-mingw/releases/download/${TOOLCHAIN_VER}/${ARCHIVE}"
+          mkdir -p llvm-mingw
+          tar -xJf "$ARCHIVE" -C llvm-mingw --strip-components=1
+          echo "$PWD/llvm-mingw/bin" >> "$GITHUB_PATH"
 
-    ###################################################
-    # 3) Setup llvm-mingw cross toolchain
-    ###################################################
-    - name: Setup llvm-mingw
-      run: |
-        set -euxo pipefail
-        TOOLCHAIN_VER="20260127"
-        ARCHIVE="llvm-mingw-${TOOLCHAIN_VER}-ucrt-ubuntu-22.04-aarch64.tar.xz"
-        wget -q "https://github.com/mstorsjo/llvm-mingw/releases/download/${TOOLCHAIN_VER}/${ARCHIVE}"
-        mkdir -p llvm-mingw
-        tar -xJf "$ARCHIVE" -C llvm-mingw --strip-components=1
-        echo "$PWD/llvm-mingw/bin" >> "$GITHUB_PATH"
+      ###################################################
+      # 4) Clone Wine & patches
+      ###################################################
+      - name: Clone Wine & Patches
+        run: |
+          set -euxo pipefail
+          git clone --depth 1 --branch wine-11.1 https://gitlab.winehq.org/wine/wine.git wine
+          git clone --depth 1 --branch v11.1 https://github.com/wine-staging/wine-staging.git wine-staging
+          git clone https://github.com/Frogging-Family/wine-tkg-git.git wine-tkg
 
-    ###################################################
-    # 4) Clone Wine & patches
-    ###################################################
-    - name: Clone Wine & Patches
-      run: |
-        set -euxo pipefail
-        git clone --depth 1 --branch wine-11.1 https://gitlab.winehq.org/wine/wine.git wine
-        git clone --depth 1 --branch v11.1 https://github.com/wine-staging/wine-staging.git wine-staging
-        git clone https://github.com/Frogging-Family/wine-tkg-git.git wine-tkg
+      ###################################################
+      # 5) Apply Staging patches
+      ###################################################
+      - name: Apply Staging patches
+        run: |
+          set -euxo pipefail
+          cd wine
+          python3 ../wine-staging/staging/patchinstall.py --all --destdir="$(pwd)"
+          cd ..
 
-    ###################################################
-    # 5) Apply Staging patches
-    ###################################################
-    - name: Apply Staging patches
-      run: |
-        set -euxo pipefail
-        cd wine
-        python3 ../wine-staging/staging/patchinstall.py DESTDIR="$(pwd)" --all
+      ###################################################
+      # 6) Prepare wine-tkg configuration
+      ###################################################
+      - name: Generate wine-tkg customization.cfg
+        run: |
+          set -euxo pipefail
+          mkdir -p wine/tkg-custom
+          cat > wine/tkg-custom/customization.cfg <<'EOF'
+          ################################################################################
+          #  Winlator‑oriented wine‑tkg config
+          ################################################################################
+          _use_staging="true"
+          _use_esync="true"
+          _use_fsync="true"
+          _use_mono="false"
+          _use_gecko="false"
+          _use_fullscreen_hack="true"
+          _optimize_cflags="-O2"
+          _optimize_cxxflags="-O2"
+          _EXTERNAL_INSTALL="false"
+          ################################################################################
+          EOF
 
-    ###################################################
-    # 6) Prepare wine-tkg configuration
-    ###################################################
-    - name: Generate wine-tkg customization.cfg
-      run: |
-        set -euxo pipefail
-        mkdir -p wine/tkg-custom
-        cat > wine/tkg-custom/customization.cfg << 'EOF'
-        ################################################################################
-        #  Winlator‑oriented wine‑tkg config
-        ################################################################################
-        _use_staging="true"
-        _use_esync="true"
-        _use_fsync="true"
-        _use_mono="false"
-        _use_gecko="false"
-        _use_fullscreen_hack="true"
-        _optimize_cflags="-O2"
-        _optimize_cxxflags="-O2"
-        _EXTERNAL_INSTALL="false"
-        ################################################################################
-        EOF
+      ###################################################
+      # 7) Configure & Compile Wine with wine-tools
+      ###################################################
+      - name: Configure & Compile Wine
+        run: |
+          set -euxo pipefail
 
-    ###################################################
-    # 7) Configure & Compile Wine with wine-tools
-    ###################################################
-    - name: Configure & Compile Wine
-      run: |
-        set -euxo pipefail
+          cd wine
 
-        cd wine
+          # ── Build wine-tools locally (needed for cross compile)
+          mkdir wine-tools-build
+          cd wine-tools-build
+          ../configure \
+            --enable-tools \
+            --disable-tests \
+            --disable-win16 \
+            --enable-archs=aarch64,i386
+          make -j"$(nproc)"
+          cd ..
 
-        # ── Build wine-tools locally (needed for cross compile)
-        mkdir wine-tools-build
-        cd wine-tools-build
-        ../configure \
-          --enable-tools \
-          --disable-tests \
-          --disable-win16 \
-          --enable-archs=aarch64,i386
-        make -j"$(nproc)"
-        cd ..
+          # ── Run tkg prepare to apply all patches from customization.cfg
+          bash ../wine-tkg/wine-tkg-git/wine-tkg-scripts/prepare.sh
 
-        # ── Run tkg prepare to apply all patches from customization.cfg
-        bash ../wine-tkg/wine-tkg-git/wine-tkg-scripts/prepare.sh
+          # ── Cross compile Wine
+          mkdir build
+          cd build
 
-        # ── Cross compile Wine
-        mkdir build
-        cd build
+          export BUILD=aarch64-linux-gnu
+          export HOST=aarch64-w64-mingw32
+          export CC=aarch64-w64-mingw32-clang
+          export CXX=aarch64-w64-mingw32-clang++
+          export AR=aarch64-w64-mingw32-ar
+          export LD=aarch64-w64-mingw32-lld
+          export RC=aarch64-w64-mingw32-windres
+          export RANLIB=aarch64-w64-mingw32-ranlib
 
-        export BUILD=aarch64-linux-gnu
-        export HOST=aarch64-w64-mingw32
-        export CC=aarch64-w64-mingw32-clang
-        export CXX=aarch64-w64-mingw32-clang++
-        export AR=aarch64-w64-mingw32-ar
-        export LD=aarch64-w64-mingw32-lld
-        export RC=aarch64-w64-mingw32-windres
-        export RANLIB=aarch64-w64-mingw32-ranlib
+          ../configure \
+            --build="$BUILD" \
+            --host="$HOST" \
+            --with-mingw=clang \
+            --with-wine-tools="../wine-tools-build" \
+            --prefix=/usr \
+            --enable-win64 \
+            --enable-wow64 \
+            --enable-archs=arm64ec,aarch64,i386 \
+            --disable-tests \
+            --without-mono \
+            --without-gecko \
+            --with-freetype \
+            --with-fontconfig \
+            --with-alsa \
+            --with-pulse
+          make -j"$(nproc)"
 
-        ../configure \
-          --build="$BUILD" \
-          --host="$HOST" \
-          --with-mingw=clang \
-          --with-wine-tools="../wine-tools-build" \
-          --prefix=/usr \
-          --enable-win64 \
-          --enable-wow64 \
-          --enable-archs=arm64ec,aarch64,i386 \
-          --disable-tests \
-          --without-mono \
-          --without-gecko \
-          --with-freetype \
-          --with-fontconfig \
-          --with-alsa \
-          --with-pulse
-        make -j"$(nproc)"
+      ###################################################
+      # 8) Build DXVK
+      ###################################################
+      - name: Build DXVK
+        run: |
+          set -euxo pipefail
+          git clone https://github.com/doitsujin/dxvk.git dxvk
+          cd dxvk
+          git submodule update --init --recursive
+          pip3 install meson ninja
+          meson setup build \
+            --cross-file=../wine/build/config/meson.cross.arm64ec.ini \
+            --prefix=/usr \
+            -Dbuild_tests=false
+          ninja -C build && ninja -C build install
 
-    ###################################################
-    # 8) Build DXVK
-    ###################################################
-    - name: Build DXVK
-      run: |
-        set -euxo pipefail
-        git clone https://github.com/doitsujin/dxvk.git dxvk
-        cd dxvk
-        git submodule update --init --recursive
-        pip3 install meson ninja
-        meson setup build --cross-file=../wine/build/config/meson.cross.arm64ec.ini \
-          --prefix=/usr -Dbuild_tests=false
-        ninja -C build && ninja -C build install
+      ###################################################
+      # 9) Build VKD3D‑Proton
+      ###################################################
+      - name: Build VKD3D‑Proton
+        run: |
+          set -euxo pipefail
+          git clone https://github.com/HansKristian-Work/vkd3d-proton.git vkd3d
+          cd vkd3d
+          git submodule update --init --recursive
+          meson setup build \
+            --cross-file=../wine/build/config/meson.cross.arm64ec.ini \
+            --prefix=/usr \
+            -Dbuild_tests=false
+          ninja -C build && ninja -C build install
 
-    ###################################################
-    # 9) Build VKD3D‑Proton
-    ###################################################
-    - name: Build VKD3D‑Proton
-      run: |
-        set -euxo pipefail
-        git clone https://github.com/HansKristian-Work/vkd3d-proton.git vkd3d
-        cd vkd3d
-        git submodule update --init --recursive
-        meson setup build --cross-file=../wine/build/config/meson.cross.arm64ec.ini \
-          --prefix=/usr -Dbuild_tests=false
-        ninja -C build && ninja -C build install
+      ###################################################
+      # 10) Build TURNIP Mesa Vulkan
+      ###################################################
+      - name: Build TURNIP Mesa
+        run: |
+          set -euxo pipefail
+          git clone https://gitlab.freedesktop.org/mesa/mesa.git mesa
+          cd mesa
+          pip3 install meson ninja
+          meson setup builddir \
+            -Dvulkan-drivers=turnip \
+            -Dgallium-drivers=freedreno \
+            -Dplatforms=android,x11 \
+            --cross-file=../wine/build/config/meson.cross.arm64ec.ini \
+            -Dbuildtype=release
+          ninja -C builddir && ninja -C builddir install
 
-    ###################################################
-    # 10) Build TURNIP Mesa Vulkan
-    ###################################################
-    - name: Build TURNIP Mesa
-      run: |
-        set -euxo pipefail
-        git clone https://gitlab.freedesktop.org/mesa/mesa.git mesa
-        cd mesa
-        pip3 install meson ninja
-        meson setup builddir \
-          -Dvulkan-drivers=turnip \
-          -Dgallium-drivers=freedreno \
-          -Dplatforms=android,x11 \
-          --cross-file=../wine/build/config/meson.cross.arm64ec.ini \
-          -Dbuildtype=release
-        ninja -C builddir && ninja -C builddir install
+      ###################################################
+      # 11) Packaging .wcp for Winlator
+      ###################################################
+      - name: Package .wcp
+        run: |
+          set -euxo pipefail
+          cd wine/build
+          DESTDIR=$PWD/install make install
+          cd install
+          mkdir -p wcp/{bin,lib/wine,share}
 
-    ###################################################
-    # 11) Packaging .wcp for Winlator
-    ###################################################
-    - name: Package .wcp
-      run: |
-        set -euxo pipefail
+          # Copy executables and libraries
+          cp -a usr/bin/* wcp/bin/ 2>/dev/null || true
+          cp -a usr/lib/wine/* wcp/lib/wine/ 2>/dev/null || true
+          cp -a usr/share/* wcp/share/ 2>/dev/null || true
 
-        cd wine/build
-        DESTDIR=$PWD/install make install
+          # Symlink wine to wine64
+          cd wcp/bin && ln -sf wine64 wine && cd ../..
 
-        cd install
-        mkdir -p wcp/{bin,lib/wine,share}
+          # Ensure executables and .so are executable
+          find bin -type f -exec chmod +x {} +
+          find lib -name "*.so*" -exec chmod +x {} +
 
-        cp -a usr/bin/* wcp/bin/ 2>/dev/null
-        cp -a usr/lib/wine/* wcp/lib/wine/ 2>/dev/null
-        cp -a usr/share/* wcp/share/ 2>/dev/null
-
-        cd wcp/bin && ln -sf wine64 wine && cd ../..
-
-        find bin -type f -exec chmod +x {} +
-        find lib -name "*.so*" -exec chmod +x {} +
-
-        cat > profile.json << 'EOF'
-        {
-          "id": "wine-11.1-staging-tkg-arm64ec",
-          "name": "Wine 11.1 Staging‑tkg Arm64EC",
-          "version": "11.1",
-          "arch": "arm64ec",
-          "files": {
-            "bin": "bin/",
-            "lib": "lib/",
-            "share": "share/"
+          # Create profile for Winlator
+          cat > profile.json <<'EOF'
+          {
+            "id": "wine-11.1-staging-tkg-arm64ec",
+            "name": "Wine 11.1 Staging‑tkg Arm64EC",
+            "version": "11.1",
+            "arch": "arm64ec",
+            "files": {
+              "bin": "bin/",
+              "lib": "lib/",
+              "share": "share/"
+            }
           }
-        }
-        EOF
+          EOF
 
-        tar -cJf "$GITHUB_WORKSPACE/wine-11.1-staging-tkg-arm64ec.wcp" profile.json wcp
+          tar -cJf "$GITHUB_WORKSPACE/wine-11.1-staging-tkg-arm64ec.wcp" profile.json wcp
 
-    ###################################################
-    # 12) Upload artifact
-    ###################################################
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: wine-wcp-arm64ec
-        path: wine-11.1-staging-tkg-arm64ec.wcp
+      ###################################################
+      # 12) Upload artifact
+      ###################################################
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: wine-wcp-arm64ec
+          path: wine-11.1-staging-tkg-arm64ec.wcp
