--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -28,55 +28,47 @@ jobs:
       ###################################################
       # 2) Install build dependencies
       ###################################################
-      - name: Install build dependencies
-        run: |
-          set -euxo pipefail
+      - name: Install build dependencies (full arm64 support)
+  run: |
+    set -euxo pipefail
 
-          ################################################################
-          # 📌 Add ports.ubuntu.com for arm64 — обязательно,
-          # иначе apt не видит dev‑пакетов (например FreeType, SDL2).
-          # Без этого Ubuntu‑runner не распознаёт arm64‑dev пакеты.
-          ################################################################
-          sudo bash -euxo pipefail << 'EOF'
-          cat << 'CONFIG' | sudo tee /etc/apt/sources.list.d/ports-arm64.list
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble main universe multiverse
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-updates main universe multiverse
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-security main universe multiverse
-          CONFIG
-          sudo apt update
-          EOF
+    ################################################################
+    # Add arm64 ports if necessary
+    ################################################################
+    sudo bash -euxo pipefail << 'EOF'
+    cat << 'CONFIG' | sudo tee /etc/apt/sources.list.d/ports-arm64.list
+    deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble main universe multiverse
+    deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-updates main universe multiverse
+    deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-security main universe multiverse
+    CONFIG
+    sudo apt update
+    EOF
 
-          ################################################################
-          # 📦 Install build essentials and dev libs
-          # We include SDL2, FreeType, Vulkan, fontconfig, dbus, usb, xml, ...
-          # SDL2 — обязательна для Wine UI & input handling.
-          # FreeType — обязательна для корректного рендеринга шрифтов.
-          # Vulkan — нужна для Turnip / WineD3D Vulkan backend.
-          ################################################################
-          sudo apt install -y --no-install-recommends \
-            build-essential autoconf automake libtool pkg-config \
-            python3 python3-pip git gettext flex bison \
-            ninja-build cmake meson \
-            llvm clang lld \
-            libasound2-dev libpulse-dev libv4l-dev libgl-dev \
-            libx11-dev libxext-dev libxfixes-dev libxinerama-dev \
-            libxi-dev libxrandr-dev libxrender-dev \
-            libfontconfig-dev libfreetype-dev libgnutls28-dev \
-            libdbus-1-dev libsdl2-dev \
-            libjpeg-dev libpng-dev libxml2-dev libudev-dev \
-            libusb-1.0-0-dev libldap2-dev \
-            libvulkan-dev
+    ################################################################
+    # Install dependencies including SDL2, FreeType, Vulkan, etc.
+    ################################################################
+    sudo apt install -y --no-install-recommends \
+      build-essential autoconf automake libtool pkg-config \
+      python3 python3-pip git gettext flex bison \
+      ninja-build cmake meson \
+      llvm clang lld \
+      libasound2-dev libpulse-dev libv4l-dev libgl-dev \
+      libx11-dev libxext-dev libxfixes-dev libxinerama-dev \
+      libxi-dev libxrandr-dev libxrender-dev \
+      libfontconfig-dev libfreetype-dev libgnutls28-dev \
+      libdbus-1-dev libsdl2-dev \
+      libjpeg-dev libpng-dev libxml2-dev libudev-dev \
+      libusb-1.0-0-dev libldap2-dev \
+      libvulkan-dev
 
-          ################################################################
-          # 📌 Export pkg‑config variables for arm64 — чтобы configure
-          # видел *.pc файлы (например freetype2, sdl2) в /usr/lib/aarch64-linux-gnu
-          # Обязательно для корректного обнаружения всех либ.
-          PKG_CONFIG_PATH="/usr/lib/aarch64-linux-gnu/pkgconfig:$PKG_CONFIG_PATH"
-          PKG_CONFIG_LIBDIR="/usr/lib/aarch64-linux-gnu/pkgconfig"
-          export PKG_CONFIG_PATH PKG_CONFIG_LIBDIR
+    ################################################################
+    # Ensure pkg-config sees the arm64 pkgconfig entries
+    ################################################################
+    export PKG_CONFIG_PATH="/usr/lib/aarch64-linux-gnu/pkgconfig:${PKG_CONFIG_PATH:-}"
+    export PKG_CONFIG_LIBDIR="/usr/lib/aarch64-linux-gnu/pkgconfig"
 
-          sudo apt clean
-          sudo rm -rf /var/lib/apt/lists/*
+    sudo apt clean
+    sudo rm -rf /var/lib/apt/lists/*
 
       ###################################################
       # 3) Setup llvm‑mingw cross toolchain
